--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <body>
     <h2>Stefan Needham</h2>
     <p>Montreal, QC</p>
-    <p><strong>stefan.needham.86@gmail.com</strong></p>
+    <p><strong>testemail@mail.com</strong></p>
     <hr>
     <form class="" action="mailto:mailtotest@mail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
